--- a/Rent_A_Car_Web/Areas/Identity/Pages/_ViewImports.cshtml
+++ b/Rent_A_Car_Web/Areas/Identity/Pages/_ViewImports.cshtml
@@ -1,4 +1,5 @@
 ﻿@using Microsoft.AspNetCore.Identity
 @using Rent_A_Car_Web.Areas.Identity
 @using Rent_A_Car_Web.Areas.Identity.Pages
+@using Rent_A_Car_Web.Data
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
