--- a/Rent_A_Car_Web/Views/Shared/_LoginPartial.cshtml
+++ b/Rent_A_Car_Web/Views/Shared/_LoginPartial.cshtml
@@ -1,6 +1,8 @@
 ﻿@using Microsoft.AspNetCore.Identity
-@inject SignInManager<IdentityUser> SignInManager
-@inject UserManager<IdentityUser> UserManager
+@using Rent_A_Car_Web.Models;
+@using Rent_A_Car_Web.Data
+@inject SignInManager<User> SignInManager
+@inject UserManager<User> UserManager
 
 <ul class="navbar-nav">
 @if (SignInManager.IsSignedIn(User))
