--- a/Rent_A_Car_Web/Views/Shared/_Layout.cshtml
+++ b/Rent_A_Car_Web/Views/Shared/_Layout.cshtml
@@ -1,4 +1,9 @@
-﻿<!DOCTYPE html>
+﻿@using Microsoft.AspNetCore.Identity
+@using Rent_A_Car_Web.Data
+@inject SignInManager<User> SignInManager
+@inject UserManager<User> UserManager
+
+<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="utf-8" />
@@ -9,6 +14,7 @@
     <link rel="stylesheet" href="~/Rent_A_Car_Web.styles.css" asp-append-version="true" />
 </head>
 <body>
+
     <header>
         <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow mb-3">
             <div class="container-fluid">
@@ -22,9 +28,24 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index">Home</a>
                         </li>
+
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="ViewCars">View cars</a>
                         </li>
+                        @if (SignInManager.IsSignedIn(User))
+                        {
+                            User user = UserManager.FindByEmailAsync(User.Identity?.Name).Result;
+                            @if (user.Role.ToString() == "Admin")
+                            {
+                                <li class="nav-item">
+                                    <a class="nav-link text-dark" asp-area="" asp-controller="Admin" asp-action="Index">Admin panel</a>
+                                </li>
+                            }
+                        }
+                        
+
+
+
                     </ul>
                     <partial name="_LoginPartial" />
                 </div>
