--- a/Rent_A_Car_Web/Views/Admin/CreateCar.cshtml
+++ b/Rent_A_Car_Web/Views/Admin/CreateCar.cshtml
@@ -17,10 +17,16 @@
                 <input asp-for="Brand" class="form-control" />
                 <span asp-validation-for="Brand" class="text-danger"></span>
             </div>
+
              <div class="form-group">
                 <label asp-for="Model" class="control-label"></label>
                 <input asp-for="Model" class="form-control" />
                 <span asp-validation-for="Model" class="text-danger"></span>
+            </div>
+            <div class="form-group">
+                <label asp-for="ImageUrl" class="control-label"></label>
+                <input asp-for="ImageUrl" class="form-control" />
+                <span asp-validation-for="ImageUrl" class="text-danger"></span>
             </div>
              <div class="form-group">
                 <label asp-for="Seat" class="control-label"></label>
