--- a/Rent_A_Car_Web/Views/Admin/Index.cshtml
+++ b/Rent_A_Car_Web/Views/Admin/Index.cshtml
@@ -65,9 +65,9 @@
                     @Html.DisplayFor(modelItem => item.Availabilyty)
                 </td>
                 <td>
-                    <a asp-action="Edit" asp-route-id="@item.Id">Edit</a> |
-                    <a asp-action="Details" asp-route-id="@item.Id">Details</a> |
-                    <a asp-action="Delete" asp-route-id="@item.Id">Delete</a>
+                    <a asp-action="EditCar" asp-route-id="@item.Id">Edit</a> |
+                    <a asp-action="CarDetails" asp-route-id="@item.Id">Details</a> |
+                    <a asp-action="DeleteCar" asp-route-id="@item.Id">Delete</a>
                 </td>
             </tr>
 
