--- a/Rent_A_Car_Web/Views/Shared/_Layout.cshtml
+++ b/Rent_A_Car_Web/Views/Shared/_Layout.cshtml
@@ -30,7 +30,7 @@
                         </li>
 
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="ViewCars">View cars</a>
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Cars" asp-action="Index">View cars</a>
                         </li>
                         @if (SignInManager.IsSignedIn(User))
                         {
