--- a/Rent_A_Car_Web/Views/Admin/CreateCar.cshtml
+++ b/Rent_A_Car_Web/Views/Admin/CreateCar.cshtml
@@ -48,7 +48,7 @@
                 <input asp-for="Price" class="form-control" />
                 <span asp-validation-for="Price" class="text-danger"></span>
             </div>
-            <div class="form-group">
+            <div class="form-group m-2">
                 <input type="submit" value="Create" class="btn btn-primary" />
             </div>
         </form>
