--- a/Rent_A_Car_Web/Views/Cars/Index.cshtml
+++ b/Rent_A_Car_Web/Views/Cars/Index.cshtml
@@ -1,9 +1,46 @@
-﻿
+﻿@model IEnumerable<Rent_A_Car_Web.Data.Car>
+
 @{
     ViewData["Title"] = "Car catalog";
 }
-<div class="text-center">
-    <h1 class="display-4">Car catalog page</h1>
-    <p>This is car List</p>
+<h1 class="mx-auto text-center">Car catalog</h1>
+<div class="container mt-4">
+    @if (Model.Any())
+    {
+        var availableCars = 0;
+        <div class="row" style="display:flex;justify-content:space-evenly;">
+        @foreach (var car in Model)
+        {
+
+            if (car.Availabilyty)
+            {
+                availableCars++;
+                <div class="border-dark border-3 shadow-sm m-2 text-center col-lg" style="width:14rem;height:16rem;">
+                   <a asp-action="CarDetails" asp-route-id="@car.Id" class="text-decoration-none text-black">
+                        <div>
+                            <div>
+                                <img class="mx-auto"src="@car.ImageUrl" alt=""style="width:9.375rem;height:6.25rem; margin-top:2rem;"/>
+                            </div>
+                            <h4>@car.Brand @car.Model</h4>
+                            <h5>$@Math.Round(car.Price,2)</h5>
+                        </div>
+                    </a>
+                </div>
+            }
+
+        }
+        </div>
+        if (availableCars == 0)
+        {
+            <div class="col-12">
+                <div class="card">
+                    <div class="card-body">
+                        We are sorry! There are no avilable cars at the moment
+                    </div>
+                </div>
+            </div>
+        }
+    }
 </div>
+
 
