--- a/Rent_A_Car_Web/Views/Shared/_Layout.cshtml
+++ b/Rent_A_Car_Web/Views/Shared/_Layout.cshtml
@@ -30,7 +30,14 @@
                         </li>
 
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Cars" asp-action="Index">View cars</a>
+                           @if(SignInManager.IsSignedIn(User))
+                            {
+                                <a class="nav-link text-dark" asp-area="" asp-controller="Cars" asp-action="Index">View cars</a>
+                            }
+                            else
+                            {
+                                 <a class="nav-link text-dark" asp-area="Identity" asp-page="/Account/Login">View Cars</a>
+                            }
                         </li>
                         @if (SignInManager.IsSignedIn(User))
                         {
