--- a/Rent_A_Car_Web/Views/Admin/Index.cshtml
+++ b/Rent_A_Car_Web/Views/Admin/Index.cshtml
@@ -1,7 +1,7 @@
 ﻿@model IEnumerable<Rent_A_Car_Web.Data.Car>
 
 @{
-    ViewData["Title"] = "Edit cars";
+    ViewData["Title"] = "View cars";
 }
 
 
