--- a/Rent_A_Car_Web/Views/Cars/Index.cshtml
+++ b/Rent_A_Car_Web/Views/Cars/Index.cshtml
@@ -15,14 +15,14 @@
             if (car.Availabilyty)
             {
                 availableCars++;
-                <div class="border-dark border-3 shadow-sm m-2 text-center col-lg" style="width:14rem;height:16rem;">
+                <div class="border-dark border-3 shadow-sm m-2 text-center col-4" style="width:14rem;height:16rem;">
                    <a asp-action="CarDetails" asp-route-id="@car.Id" class="text-decoration-none text-black">
                         <div>
                             <div>
                                 <img class="mx-auto"src="@car.ImageUrl" alt=""style="width:9.375rem;height:6.25rem; margin-top:2rem;"/>
                             </div>
                             <h4>@car.Brand @car.Model</h4>
-                            <h5>$@Math.Round(car.Price,2)</h5>
+                            <h5>@Math.Round(car.Price,2) $</h5>
                         </div>
                     </a>
                 </div>
@@ -40,6 +40,16 @@
                 </div>
             </div>
         }
+    }
+    else
+    {     
+            <div class="col-12">
+                <div class="card">
+                    <div class="card-body">
+                        We are sorry! There are no avilable cars at the moment
+                    </div>
+                </div>
+            </div>
     }
 </div>
 
