--- a/Rent_A_Car_Web/Areas/Identity/Pages/Account/Register.cshtml
+++ b/Rent_A_Car_Web/Areas/Identity/Pages/Account/Register.cshtml
@@ -12,44 +12,44 @@
             <h2>Create a new account.</h2>
             <hr />
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-            <div class="form-floating">
+            <div class="form-floating my-3">
                 <input asp-for="Input.NickName" class="form-control" autocomplete="username" aria-required="true" />
                 <label asp-for="Input.NickName"></label>
                 <span asp-validation-for="Input.NickName" class="text-danger"></span>
             </div>
-            <div class="form-floating">
+            <div class="form-floating my-3">
                 <input asp-for="Input.Email" class="form-control" autocomplete="email" aria-required="true" />
                 <label asp-for="Input.Email"></label>
                 <span asp-validation-for="Input.Email" class="text-danger"></span>
             </div>
-             <div class="form-floating">
+             <div class="form-floating my-3">
                 <input asp-for="Input.FirstName" class="form-control"  aria-required="true" />
                 <label asp-for="Input.FirstName"></label>
                 <span asp-validation-for="Input.FirstName" class="text-danger"></span>
             </div>
-            <div class="form-floating">
+            <div class="form-floating my-3">
                 <input asp-for="Input.LastName" class="form-control"  aria-required="true" />
                 <label asp-for="Input.LastName"></label>
                 <span asp-validation-for="Input.LastName" class="text-danger"></span>
             </div>
-            <div class="form-floating">
+            <div class="form-floating my-3">
                 <input asp-for="Input.PhoneNumber" class="form-control"  aria-required="true" />
                 <label asp-for="Input.PhoneNumber"></label>
                 <span asp-validation-for="Input.PhoneNumber" class="text-danger"></span>
             </div>
-            <div class="form-floating">
+            <div class="form-floating my-3">
                 <input asp-for="Input.IdentityNumber" class="form-control"  aria-required="true" />
                 <label asp-for="Input.IdentityNumber"></label>
                 <span asp-validation-for="Input.IdentityNumber" class="text-danger"></span>
             </div>
 
             
-            <div class="form-floating">
+            <div class="form-floating my-3">
                 <input asp-for="Input.Password" class="form-control" autocomplete="new-password" aria-required="true" />
                 <label asp-for="Input.Password"></label>
                 <span asp-validation-for="Input.Password" class="text-danger"></span>
             </div>
-            <div class="form-floating">
+            <div class="form-floating my-3">
                 <input asp-for="Input.ConfirmPassword" class="form-control" autocomplete="new-password" aria-required="true" />
                 <label asp-for="Input.ConfirmPassword"></label>
                 <span asp-validation-for="Input.ConfirmPassword" class="text-danger"></span>
@@ -57,36 +57,7 @@
             <button id="registerSubmit" type="submit" class="w-100 btn btn-lg btn-primary">Register</button>
         </form>
     </div>
-    <div class="col-md-6 col-md-offset-2">
-        <section>
-            <h3>Use another service to register.</h3>
-            <hr />
-            @{
-                if ((Model.ExternalLogins?.Count ?? 0) == 0)
-                {
-                    <div>
-                        <p>
-                            There are no external authentication services configured. See this <a href="https://go.microsoft.com/fwlink/?LinkID=532715">article
-                            about setting up this ASP.NET application to support logging in via external services</a>.
-                        </p>
-                    </div>
-                }
-                else
-                {
-                    <form id="external-account" asp-page="./ExternalLogin" asp-route-returnUrl="@Model.ReturnUrl" method="post" class="form-horizontal">
-                        <div>
-                            <p>
-                                @foreach (var provider in Model.ExternalLogins!)
-                                {
-                                    <button type="submit" class="btn btn-primary" name="provider" value="@provider.Name" title="Log in using your @provider.DisplayName account">@provider.DisplayName</button>
-                                }
-                            </p>
-                        </div>
-                    </form>
-                }
-            }
-        </section>
-    </div>
+   
 </div>
 
 @section Scripts {
