--- a/Rent_A_Car_Web/Views/Cars/CarDetails.cshtml
+++ b/Rent_A_Car_Web/Views/Cars/CarDetails.cshtml
@@ -17,6 +17,16 @@
             @Html.DisplayFor(model => model.Description)
         </p>
         <div class="form-group">
+                <label asp-for="RentStart" class="control-label"> Rent start date</label>
+                <input asp-for="RentStart" class="form-control" />
+                <span asp-validation-for="RentStart" class="text-danger"></span>
+            </div>
+            <div class="form-group">
+                <label asp-for="RentEnd" class="control-label">Rent end date</label>
+                <input asp-for="RentEnd" class="form-control" />
+                <span asp-validation-for="RentEnd" class="text-danger"></span>
+            </div>
+        <div class="form-group">
                 <input type="submit" value="Rent" class="btn btn-primary" />
         </div>
     </div>
