--- a/Rent_A_Car_Web/Views/Profile/Index.cshtml
+++ b/Rent_A_Car_Web/Views/Profile/Index.cshtml
@@ -1,12 +1,12 @@
 ﻿@using Microsoft.AspNetCore.Identity
 @using Rent_A_Car_Web.Data
-
 @inject UserManager<User> UserManager
-@*
-    For more information on enabling MVC for empty projects, visit https://go.microsoft.com/fwlink/?LinkID=397860
-*@
+
 @{
+    var user = UserManager.FindByEmailAsync(User.Identity?.Name).Result;//vzimame lognati-a user
+    ViewData["Title"] = $"Profile - {@user.NickName}";
 }
 <p>
     Profile page
+    @user.NickName
 </p>
