--- a/Rent_A_Car_Web/Views/Shared/_LoginPartial.cshtml
+++ b/Rent_A_Car_Web/Views/Shared/_LoginPartial.cshtml
@@ -9,7 +9,7 @@
 {
     var user = UserManager.FindByEmailAsync(User.Identity?.Name).Result;
     <li class="nav-item">
-        <a  class="nav-link text-dark" asp-controller="Profile" asp-action="ProfileDetails" asp-route-id="@user.NickName" title="Manage">Hello @user.NickName</a>
+        <a  class="nav-link text-dark"  asp-controller="Profile" asp-action="Index" asp-route-id="@user.NickName" title="Manage">Hello @user.NickName</a>
     </li>
     <li class="nav-item">
         <form  class="form-inline" asp-area="Identity" asp-page="/Account/Logout" asp-route-returnUrl="@Url.Action("Index", "Home", new { area = "" })">
