--- a/Rent_A_Car_Web/Views/Admin/CarDetails.cshtml
+++ b/Rent_A_Car_Web/Views/Admin/CarDetails.cshtml
@@ -46,6 +46,18 @@
         <dd class = "col-sm-10">
             @Html.DisplayFor(model => model.Description)
         </dd>
+         <dt class = "col-sm-2">
+            Rent start date
+        </dt>
+        <dd class = "col-sm-10">
+            @Html.DisplayFor(model => model.RentStart)
+        </dd>
+         <dt class = "col-sm-2">
+           Rent end date
+        </dt>
+        <dd class = "col-sm-10">
+            @Html.DisplayFor(model => model.RentEnd)
+        </dd>
     </dl>
 </div>
 <div>
