--- a/Rent_A_Car_Web/Views/Cars/CarDetails.cshtml
+++ b/Rent_A_Car_Web/Views/Cars/CarDetails.cshtml
@@ -1,4 +1,5 @@
-﻿@model Rent_A_Car_Web.Data.Car;
+﻿
+@model Rent_A_Car_Web.Data.Car;
 @{
     ViewData["Title"] = $"Car details";
     
@@ -16,7 +17,8 @@
         <p>
             @Html.DisplayFor(model => model.Description)
         </p>
-        <div class="form-group">
+        <form asp-controller="Cars" asp-action="RentCar"  asp-route-id="@Model.Id">
+            <div class="form-group">
                 <label asp-for="RentStart" class="control-label"> Rent start date</label>
                 <input asp-for="RentStart" class="form-control" />
                 <span asp-validation-for="RentStart" class="text-danger"></span>
@@ -26,10 +28,15 @@
                 <input asp-for="RentEnd" class="form-control" />
                 <span asp-validation-for="RentEnd" class="text-danger"></span>
             </div>
-        <div class="form-group">
+           <div class="form-group">
                 <input type="submit" value="Rent" class="btn btn-primary" />
-        </div>
+           </div>
+        </form>
+        
     </div>
    </div>
    
 </div>
+@section Scripts {
+    @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
+}
