profile page working

--- a/Rent_A_Car_Web/Views/Profile/Index.cshtml
+++ b/Rent_A_Car_Web/Views/Profile/Index.cshtml
@@ -1,13 +1,85 @@
 ﻿@using Microsoft.AspNetCore.Identity
 @using Rent_A_Car_Web.Data
+@model IEnumerable<Rent_A_Car_Web.Data.Car>
 @inject UserManager<User> UserManager
 
 @{
     var user = UserManager.FindByEmailAsync(User.Identity?.Name).Result;//vzimame lognati-a user
     ViewData["Title"] = $"Profile - {@user.NickName}";
+    
 }
 <p>
     Profile page
     @user.NickName
-    @foreach(item)
+    <h1>Rented cars</h1>
+    <table class="table">
+        <thead>
+            <tr>
+                <th>
+                 Brand
+                </th>
+                <th>
+                  Model
+                </th>
+                <th>
+                   Seat
+                </th>
+                <th>
+                 Year
+                </th>
+                <th>
+                   Price
+                </th>
+                <th>
+                    Rent start date
+                </th>
+               <th>
+                   Rent end date
+               </th>
+
+            </tr>
+        </thead>
+        <tbody>
+            @foreach (var car in Model)//Pokazvane na vskichki elementi v tablica
+            {
+                if (car.RentedByUserId == user.Id)
+                {
+                       <tr>
+                <td>
+                   @Html.DisplayFor(modelItem=>car.Brand)         
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => car.Model)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => car.Seat)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => car.Year)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => car.Price)
+                </td>
+                
+                 <td>
+                    @Html.DisplayFor(modelItem => car.RentStart)
+                </td>
+                 <td>
+                    @Html.DisplayFor(modelItem => car.RentEnd)
+                </td>
+               
+               
+               
+                <td>
+                    <a asp-controller="Profile" asp-action="CarDetails" asp-route-id="@car.Id">Details</a> 
+                   
+                </td>
+            </tr>
+
+                }
+
+            }
+        </tbody>
+    </table>
+
 </p>
