date formating display  fix

--- a/Rent_A_Car_Web/Views/Profile/Index.cshtml
+++ b/Rent_A_Car_Web/Views/Profile/Index.cshtml
@@ -62,10 +62,10 @@
                 </td>
                 
                  <td>
-                    @Html.DisplayFor(modelItem => car.RentStart)
+                    @car.RentStart.ToString("dd/MM/yyyy HH:mm")
                 </td>
                  <td>
-                    @Html.DisplayFor(modelItem => car.RentEnd)
+                    @car.RentEnd.ToString("dd/MM/yyyy HH:mm")
                 </td>
                
                
