--- a/Rent_A_Car_Web/Views/Admin/CarDetails.cshtml
+++ b/Rent_A_Car_Web/Views/Admin/CarDetails.cshtml
@@ -50,13 +50,13 @@
             Rent start date
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.RentStart)
+            @Model.RentStart.ToString("dd/MM/yyyy HH:mm")
         </dd>
          <dt class = "col-sm-2">
            Rent end date
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.RentEnd)
+            @Model.RentEnd.ToString("dd/MM/yyyy HH:mm")
         </dd>
     </dl>
 </div>
