--- a/Rent_A_Car_Web/Views/Cars/CarDetails.cshtml
+++ b/Rent_A_Car_Web/Views/Cars/CarDetails.cshtml
@@ -20,12 +20,12 @@
         <form asp-controller="Cars" asp-action="RentCar"  asp-route-id="@Model.Id">
             <div class="form-group">
                 <label asp-for="RentStart" class="control-label"> Rent start date</label>
-                <input asp-for="RentStart" class="form-control" />
+                <input asp-for="RentStart" value="@DateTime.Now.ToString("dd/MM/yyyy HH:mm")" class="form-control" />
                 <span asp-validation-for="RentStart" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="RentEnd" class="control-label">Rent end date</label>
-                <input asp-for="RentEnd" class="form-control" />
+                <input asp-for="RentEnd" value="" class="form-control" />
                 <span asp-validation-for="RentEnd" class="text-danger"></span>
             </div>
            <div class="form-group">
