--- a/Rent_A_Car_Web/Areas/Identity/Pages/Account/Register.cshtml
+++ b/Rent_A_Car_Web/Areas/Identity/Pages/Account/Register.cshtml
@@ -11,7 +11,7 @@
         <form id="registerForm" asp-route-returnUrl="@Model.ReturnUrl" method="post">
             <h2>Create a new account.</h2>
             <hr />
-            <div asp-validation-summary="ModelOnly" class="text-danger"></div>
+            <div asp-validation-summary="All" class="text-danger"></div>
             <div class="form-floating my-3">
                 <input asp-for="Input.NickName" class="form-control" autocomplete="username" aria-required="true" />
                 <label asp-for="Input.NickName"></label>
