--- a/Rent_A_Car_Web/Views/Cars/CarDetails.cshtml
+++ b/Rent_A_Car_Web/Views/Cars/CarDetails.cshtml
@@ -17,16 +17,15 @@
         <p>
             @Html.DisplayFor(model => model.Description)
         </p>
-        <form asp-controller="Cars" asp-action="RentCar"  asp-route-id="@Model.Id">
-            <div class="form-group">
+        <form  asp-controller="Cars" asp-action="RentCar"  asp-route-id="@Model.Id">
+            <div asp-validation-summary="All" class="form-group">
                 <label asp-for="RentStart" class="control-label"> Rent start date</label>
-                <input asp-for="RentStart" value="@DateTime.Now.ToString("dd/MM/yyyy HH:mm")" class="form-control" />
-                <span asp-validation-for="RentStart" class="text-danger"></span>
+                <input asp-for="@Model.RentStart" value="" class="form-control" />
+                @*<span asp-validation-for="@Model.RentStart" class="text-danger"></span>*@
             </div>
-            <div class="form-group">
+            <div  class="form-group">
                 <label asp-for="RentEnd" class="control-label">Rent end date</label>
                 <input asp-for="RentEnd" value="" class="form-control" />
-                <span asp-validation-for="RentEnd" class="text-danger"></span>
             </div>
            <div class="form-group">
                 <input type="submit" value="Rent" class="btn btn-primary" />
