--- a/Rent_A_Car_Web/Views/Home/Index.cshtml
+++ b/Rent_A_Car_Web/Views/Home/Index.cshtml
@@ -1,8 +1,26 @@
 ﻿@{
     ViewData["Title"] = "Home Page";
 }
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+    <style>
+        body {
+            background-image: url("https://previews.123rf.com/images/ostapenko/ostapenko1806/ostapenko180600198/104370987-renting-a-new-or-used-car-car-rental-booking-reservation-banner-vector-illustration-background.jpg");
+            background-color: #cccccc;
+        }
+    </style>
+</head>
+<body>
+   <div class="text-center">
 
-<div class="text-center">
-    <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
-</div>
+        <h1 style="color:white;" class="display-4">Welcome</h1>
+    
+   
+</div> 
+</body>
+</html>
